THe post is broken

--- a/src/app/components/forms/form-post-property/form-post-property.css
+++ b/src/app/components/forms/form-post-property/form-post-property.css
@@ -200,3 +200,10 @@
      min-width: 0;
      /* Importante para que el grid no se rompa */
  }
+ 
+ .p-error {
+  color: rgb(223, 121, 121);
+  font-size: 0.85rem;
+  margin: 0.3rem 0 0 0;
+    margin-bottom: 1rem;
+}
