--- a/src/app/components/forms/sub-forms/form-address/form-address.css
+++ b/src/app/components/forms/sub-forms/form-address/form-address.css
@@ -20,6 +20,11 @@
      color: #ef4444;
  }
 
+  .p-error {
+  color: rgb(223, 121, 121);
+  font-size: 0.85rem;
+}
+
  input[type="text"],
  input[type="number"],
  select,
