--- a/src/app/components/forms/sub-forms/form-owner/form-owner.css
+++ b/src/app/components/forms/sub-forms/form-owner/form-owner.css
@@ -20,6 +20,13 @@
      color: #ef4444;
  }
 
+ .p-error {
+  color: rgb(223, 121, 121);
+  font-size: 0.85rem;
+  margin: 0.3rem 0 0 0;
+    margin-bottom: 1rem;
+}
+
  input[type="text"],
  input[type="number"],
  select,
