--- a/src/app/components/forms/sub-forms/input-amenities/input-amenities.css
+++ b/src/app/components/forms/sub-forms/input-amenities/input-amenities.css
@@ -38,8 +38,15 @@ body {
     margin-bottom: 2rem;
 }
 
+.p-error {
+  color: rgb(223, 121, 121);
+  font-size: 0.85rem;
+  margin: 0.3rem 0 0 0;
+    margin-bottom: 1rem;
+}
+
 /* CADA INPUT GRUPO */
-.input-group {
+.input-group {  
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
