--- a/src/app/components/forms/sub-forms/input-amenities/input-amenities.html
+++ b/src/app/components/forms/sub-forms/input-amenities/input-amenities.html
@@ -24,6 +24,8 @@
         </div>
     </div>
 
+    @if (group.get('amenities')?.hasError('required'))  { <p class="p-error">Este campo es obligatorio</p> }
+
     <!-- LISTA DE AMENITIES AGREGADAS -->
     <div class="amenities-list">
         <div class="list-header">
