--- a/src/app/components/forms/sub-forms/input-images/input-images.css
+++ b/src/app/components/forms/sub-forms/input-images/input-images.css
@@ -96,6 +96,13 @@
     background-color: #dc2626;
 }
 
+.p-error {
+  color: rgb(223, 121, 121);
+  font-size: 0.85rem;
+  margin: 0.3rem 0 0 0;
+    margin-bottom: 1rem;
+}
+
 /* GRID DE IMÁGENES */
 .images-grid {
     display: grid;
