--- a/src/app/components/forms/sub-forms/input-images/input-images.html
+++ b/src/app/components/forms/sub-forms/input-images/input-images.html
@@ -15,6 +15,8 @@
             style="display: none;">
     </div>
 
+    @if (group.get('images')?.hasError('required')) { <p class="p-error">Este campo es obligatorio</p> }
+
     <div class="preview-container">
         @if (imagePreviews.length > 0) {
         <div class="preview-header">
