--- a/src/app/components/forms/form-post-property/form-post-property.css
+++ b/src/app/components/forms/form-post-property/form-post-property.css
@@ -63,6 +63,13 @@
      grid-column: 1 / -1;
  }
 
+ .p-error {
+     color: rgb(223, 121, 121);
+     font-size: 0.85rem;
+     margin: 0.3rem 0 0 0;
+     margin-bottom: 1rem;
+ }
+
  label {
      font-size: 0.9rem;
      font-weight: 500;
