--- a/src/app/components/forms/sub-forms/form-zone/form-zone.html
+++ b/src/app/components/forms/sub-forms/form-zone/form-zone.html
@@ -3,23 +3,35 @@
 
     <div class="form-grid" [formGroup]="group">
 
-        <div class="form-group">
+ <div class="form-group">
             <label>Zona <span class="required">*</span></label>
             <input type="text" formControlName="zone" placeholder="Ej: Centro">
+            @if (group.get('zone')?.hasError('required') && group.get('zone')?.touched ) { <p class="p-error">Este campo es obligatorio</p> }
+            @else if (group.get('zone')?.hasError('minlength') && group.get('zone')?.touched ) { <p class="p-error">Este campo tiene un minimo de 2 caracteres</p> }
+            @else if (group.get('zone')?.hasError('maxlength') && group.get('zone')?.touched ) { <p class="p-error">Este campo tiene un maximo de 50 caracteres</p> }
         </div>
         <div class="form-group">
             <label>Ciudad <span class="required">*</span></label>
             <input type="text" formControlName="city" placeholder="Ej: Buenos Aires">
+            @if (group.get('city')?.hasError('required') && group.get('city')?.touched ) { <p class="p-error">Este campo es obligatorio</p> }
+            @else if (group.get('city')?.hasError('minlength') && group.get('city')?.touched ) { <p class="p-error">Este campo tiene un minimo de 2 caracteres</p> }
+            @else if (group.get('city')?.hasError('maxlength') && group.get('city')?.touched ) { <p class="p-error">Este campo tiene un maximo de 50 caracteres</p> }
         </div>
 
         <div class="form-group">
             <label>Provincia <span class="required">*</span></label>
             <input type="text" formControlName="province" placeholder="Ej: Buenos Aires">
+            @if (group.get('province')?.hasError('required') && group.get('province')?.touched ) { <p class="p-error">Este campo es obligatorio</p> }
+            @else if (group.get('province')?.hasError('minlength') && group.get('province')?.touched ) { <p class="p-error">Este campo tiene un minimo de 2 caracteres</p> }
+            @else if (group.get('province')?.hasError('maxlength') && group.get('province')?.touched ) { <p class="p-error">Este campo tiene un maximo de 50 caracteres</p> }
         </div>
 
         <div class="form-group">
             <label>País <span class="required">*</span></label>
             <input type="text" formControlName="country" placeholder="Ej: Argentina">
+            @if (group.get('country')?.hasError('required') && group.get('country')?.touched ) { <p class="p-error">Este campo es obligatorio</p> }
+            @else if (group.get('country')?.hasError('minlength') && group.get('country')?.touched ) { <p class="p-error">Este campo tiene un minimo de 2 caracteres</p> }
+            @else if (group.get('country')?.hasError('maxlength') && group.get('country')?.touched ) { <p class="p-error">Este campo tiene un maximo de 50 caracteres</p> }
         </div>
 
     </div>
@@ -39,6 +51,7 @@
             }
 
         </select>
+        @if (group.get('zone')?.hasError('required') && group.get('zone')?.touched ) { <p class="p-error">Este campo es obligatorio</p> }
 
     </div>
     }
