--- a/src/app/pages/propertiesPages/property-detail/property-detail.html
+++ b/src/app/pages/propertiesPages/property-detail/property-detail.html
@@ -17,7 +17,7 @@
 
         <div class="content-grid">
             <div class="main-content">
-                <img src="https://images.unsplash.com/photo-1564013799919-ab600027ffc6?w=800" alt="Mansión"
+                <img [src]="propertySelected.mainImage" alt="Mansión"
                     class="property-image">
 
                 <div class="stats">
