Refactor Home page structure and implement full responsive layout : Added extensive media queries to achieve full responsiveness across TV/large screens, laptops, and mobile devices - Merged FilterHome component into Home component, moving the form and removing the extra component - Updated HTML and CSS with various UI tweaks, including button adjustments. Performed minor TypeScript cleanups related to the component merge.

--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -24,11 +24,11 @@
         @if(isAdmin()){
         <button type="button" class="cta" routerLink="admin/form-post">Administracion</button>
         }
-      <button type="button" class="cta" (click)="logOut()">Log out</button>
+      <button type="button" class="cta" (click)="logOut()">Cerrar sesion</button>
 
       }@else {
-      <button type="button" class="cta" routerLink="log-in">Log in</button>
-      <button type="button" class="cta" routerLink="register">Register</button>
+      <button type="button" class="cta" routerLink="log-in">Iniciar sesion</button>
+      <button type="button" class="cta" routerLink="register">Registrarse</button>
       }
 
 
